--- a/Core6_Apress/_03_PartyInvites/Views/Home/Index.cshtml
+++ b/Core6_Apress/_03_PartyInvites/Views/Home/Index.cshtml
@@ -7,14 +7,17 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Party!</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <div>
-        <div>
-            We're going to have an exciting party!<br />
-            <!-- TODO: Sell it! Add more content, pictures, etc. -->
+    <div class="text-center mt-3">
+        <div class="m-2">
+            <h3>We're going to have an exciting party!</h3>
+            <h4 class="fw-bolder fst-italic">And YOU are invited!</h4>
         </div>
-        <a asp-action="RsvpForm">RSVP Now!</a>
+        <a class="btn btn-primary" asp-action="RsvpForm">RSVP Now!</a>
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </html>
