--- a/Core6_Apress/_03_PartyInvites/Views/Home/RsvpForm.cshtml
+++ b/Core6_Apress/_03_PartyInvites/Views/Home/RsvpForm.cshtml
@@ -8,31 +8,45 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RSVP Form</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <form asp-action="RsvpForm" method="post">
-        <div class="text-danger" asp-validation-summary="All"></div>
-        <div>
-            <label asp-for="Name">Your Name:</label>
-            <input asp-for="Name" />
+    <div class="text-center mt-3">
+        <h1 class="m-2">
+            <h1>RSVP TO THE PARTY</h1>
+            <div class="row form-inline">
+                <div class="col">
+                    <form asp-action="RsvpForm" method="post">
+                        <div class="text-danger p-1" asp-validation-summary="All"></div>
+                        <div class="pb-1">
+                            <label asp-for="Name">Your Name:</label>
+                            <input asp-for="Name" />
+                        </div>
+                        <div class="pb-1">
+                            <label asp-for="Email">Your Email:</label>
+                            <input asp-for="Email" />
+                        </div>
+                        <div class="pb-1">
+                            <label asp-for="Email">Your Phone:</label>
+                            <input asp-for="Phone" />
+                        </div>
+                        <div class="pb-1">
+                            <label asp-for="WillAttend">Will you Attend?</label>
+                            <select asp-for="WillAttend">
+                                <option value="">Choose an option</option>
+                                <option value="true">Yes, I'll be attending.</option>
+                                <option value="false">No, I have a conflict.</option>
+                            </select>
+                        </div>
+                        <button class="btn btn-primary mt-2 me-2" type="submit">Submit RSVP</button>
+                        <a class="btn btn-secondary mt-2" asp-action="RsvpForm">Clear Form</a>
+                    </form>
+                    <a class="btn btn-secondary mt-3" asp-action="Index">Back to Home</a>
+                </div>
+            </div>
         </div>
-        <div>
-            <label asp-for="Email">Your Email:</label>
-            <input asp-for="Email" />
-        </div>
-        <div>
-            <label asp-for="Email">Your Phone:</label>
-            <input asp-for="Phone" />
-        </div>
-        <div>
-            <label asp-for="WillAttend">Will you Attend?</label>
-            <select asp-for="WillAttend">
-                <option value="">Choose an option</option>
-                <option value="true">Yes, I'll be attending.</option>
-                <option value="false">No, I have a conflict.</option>
-            </select>
-        </div>
-        <button type="submit">Submit RSVP</button>
-    </form>
+    </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </html>
