--- a/Core6_Apress/_03_PartyInvites/Views/Home/Thanks.cshtml
+++ b/Core6_Apress/_03_PartyInvites/Views/Home/Thanks.cshtml
@@ -8,21 +8,26 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thanks</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <div>
-        <h3>Thanks you, @Model.Name.</h3>
-        @if (Model?.WillAttend == true)
-        {
-            @:That's fabulous, The drinks are already chilling in the fridge!
-        }
-        else
-        {
-            @:Soryy to hear that you can't make it. Thanks for letting us know.
-        }
-    </div>
-    <div>
-        Click <a asp-action="ListResponses">here</a> to see whois comming.
+    <div class="text-center mt-3">
+        <div class="m-2">
+            <h3>Thanks you, @Model.Name.</h3>
+            @if (Model?.WillAttend == true)
+            {
+                @:That's fabulous, The drinks are already chilling in the fridge!
+            }
+            else
+            {
+                @:Soryy to hear that you can't make it. Thanks for letting us know.
+            }
+        </div>
+        <div>
+            <a class="btn btn-secondary mt-3" asp-action="ListResponses">Who's Attending?</a>
+        </div>
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </html>
