--- a/Core6_Apress/_03_PartyInvites/wwwroot/css/site.css
+++ b/Core6_Apress/_03_PartyInvites/wwwroot/css/site.css
@@ -14,5 +14,35 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+label {
+    display: inline-block;
+    width: 10em;
+    padding-right: 1em;
+}
+
+.field-validation-error {
+    color: #f00;
+}
+
+.field-validation-valid {
+    display: none;
+}
+
+.input-validation-error {
+    border: 1px solid #f00;
+    background-color: #fee;
+}
+
+.validation-summary-errors {
+    font-weight: bold;
+    color: #f00;
+}
+
+.validation-summary-valid {
+    display: none;
+}
+
