--- a/Core6_Apress/_03_PartyInvites/Views/Home/Index.cshtml
+++ b/Core6_Apress/_03_PartyInvites/Views/Home/Index.cshtml
@@ -16,8 +16,8 @@
             <h3>We're going to have an exciting party!</h3>
             <h4 class="fw-bolder fst-italic">And YOU are invited!</h4>
         </div>
-        <a class="btn btn-primary" asp-action="RsvpForm">RSVP Now!</a>
+        <a class="btn btn-primary" asp-action="RsvpForm">RSVP NOW !</a>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </html>
