--- a/Core6_Apress/_03_PartyInvites/Views/Home/ListResponses.cshtml
+++ b/Core6_Apress/_03_PartyInvites/Views/Home/ListResponses.cshtml
@@ -12,33 +12,29 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <div class="text-center mt-3">
-        <div class="m-2">
-            <h2>Here is a list of those attending the party</h2>
-            <div class="text-center mt-3">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Email</th>
-                            <th>Phone</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (_03_PartyInvites.Models.GuestResponse item in Model)
-                        {
-                            <tr>
-                                <td>@item.Name</td>
-                                <td>@item.Email</td>
-                                <td>@item.Phone</td>
-                            </tr>
-                        }
-                    </tbody>
-                </table>
-            </div>
-            <a class="btn btn-secondary mt-3" asp-action="Index">Back to Home</a>
-        </div>
+    <div class="text-center p-2">
+        <h2 class="bg-primary text-white text-center">Here is a list of those attending the party.</h2>
+        <table class="table table-bordered table-striped table-sm">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Phone</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (_03_PartyInvites.Models.GuestResponse item in Model)
+                {
+                    <tr>
+                        <td>@item.Name</td>
+                        <td>@item.Email</td>
+                        <td>@item.Phone</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+        <a class="btn btn-outline-secondary mt-3" asp-action="Index">Back to Home</a>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </html>
