--- a/Core6_Apress/_03_PartyInvites/Views/Home/Thanks.cshtml
+++ b/Core6_Apress/_03_PartyInvites/Views/Home/Thanks.cshtml
@@ -21,13 +21,15 @@
             }
             else
             {
-                @:Soryy to hear that you can't make it. Thanks for letting us know.
+                @:Sorry to hear that you can't make it. Thanks for letting us know.
             }
         </div>
         <div>
             <a class="btn btn-secondary mt-3" asp-action="ListResponses">Who's Attending?</a>
         </div>
+        <br />
+        <a class="btn btn-outline-secondary mt-3" asp-action="Index">Back to Home</a>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </html>
